fix(member): add function, fix db, add entity, timeline