@@ -1,5 +1,9 @@
 package com.fitlife.member.service.impl;
 
+import com.fitlife.common.exception.AppException;
+import com.fitlife.common.exception.ErrorCode;
+import com.fitlife.common.response.PageResponse;
+import com.fitlife.member.avatar.service.MemberAvatarStorageService;
 import com.fitlife.member.dto.request.AdminMemberStatusUpdateRequest;
 import com.fitlife.member.dto.request.MemberCreateRequest;
 import com.fitlife.member.dto.request.MemberUpdateRequest;
@@ -10,8 +14,8 @@ import com.fitlife.member.entity.Member;
 import com.fitlife.member.enums.MemberStatus;
 import com.fitlife.member.mapper.MemberMapper;
 import com.fitlife.member.repository.MemberRepository;
+import com.fitlife.member.service.CurrentMemberService;
 import com.fitlife.member.service.MemberService;
-import com.fitlife.common.response.PageResponse;
 import com.fitlife.user.entity.Role;
 import com.fitlife.user.entity.User;
 import com.fitlife.user.enums.AuthProvider;
@@ -23,9 +27,11 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDate;
 import java.util.HashSet;
+import java.util.Locale;
 import java.util.Objects;
 
 @Service
@@ -39,50 +45,55 @@ public class MemberServiceImpl implements MemberService {
     private final RoleRepository roleRepository;
     private final MemberMapper memberMapper;
     private final PasswordEncoder passwordEncoder;
+    private final CurrentMemberService currentMemberService;
+    private final MemberAvatarStorageService memberAvatarStorageService;
 
     @Override
     @Transactional
     public MemberResponse createMemberByAdmin(MemberCreateRequest request) {
-        validateUniqueUsername(request.getUsername());
-        validateUniqueEmail(request.getEmail());
+        String username = normalizeRequired(request.getUsername());
+        String email = normalizeEmail(request.getEmail());
+        String phone = normalizeNullable(request.getPhone());
+
+        validateUniqueUsername(username, null);
+        validateUniqueEmail(email, null);
+        validateUniquePhone(phone, null);
 
         Role memberRole = roleRepository.findByCode(ROLE_MEMBER_CODE)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy ROLE_MEMBER"));
+                .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
 
-        User user = new User();
-        user.setUsername(request.getUsername());
-        user.setEmail(request.getEmail());
-        user.setPasswordHash(passwordEncoder.encode(request.getPassword()));
-        user.setFullName(request.getFullName());
-        user.setPhone(request.getPhone());
-        user.setStatus(UserStatus.ACTIVE);
-        user.setAuthProvider(AuthProvider.LOCAL);
-        user.setEmailVerified(false);
-        user.setIsDeleted(false);
+        User user = User.builder()
+                .username(username)
+                .email(email)
+                .passwordHash(passwordEncoder.encode(request.getPassword()))
+                .fullName(normalizeRequired(request.getFullName()))
+                .phone(phone)
+                .status(UserStatus.ACTIVE)
+                .authProvider(AuthProvider.LOCAL)
+                .emailVerified(true)
+                .isDeleted(false)
+                .roles(new HashSet<>())
+                .build();
 
-        if (user.getRoles() == null) {
-            user.setRoles(new HashSet<>());
-        }
         user.getRoles().add(memberRole);
-
         User savedUser = userRepository.save(user);
 
-        Member member = new Member();
-        member.setUser(savedUser);
-        member.setMemberCode(generateMemberCode());
-        member.setGender(request.getGender());
-        member.setDateOfBirth(request.getDateOfBirth());
-        member.setAddress(request.getAddress());
-        member.setEmergencyContactName(request.getEmergencyContactName());
-        member.setEmergencyContactPhone(request.getEmergencyContactPhone());
-        member.setJoinDate(LocalDate.now());
-        member.setFitnessGoal(request.getFitnessGoal());
-        member.setHealthNote(request.getHealthNote());
-        member.setStatus(MemberStatus.ACTIVE);
-        member.setIsDeleted(false);
+        Member member = Member.builder()
+                .user(savedUser)
+                .memberCode(generateMemberCode())
+                .gender(request.getGender())
+                .dateOfBirth(request.getDateOfBirth())
+                .address(normalizeNullable(request.getAddress()))
+                .emergencyContactName(normalizeNullable(request.getEmergencyContactName()))
+                .emergencyContactPhone(normalizeNullable(request.getEmergencyContactPhone()))
+                .joinDate(LocalDate.now())
+                .fitnessGoal(request.getFitnessGoal())
+                .healthNote(normalizeNullable(request.getHealthNote()))
+                .status(MemberStatus.ACTIVE)
+                .isDeleted(false)
+                .build();
 
-        Member savedMember = memberRepository.save(member);
-        return memberMapper.toResponse(savedMember);
+        return memberMapper.toResponse(memberRepository.save(member));
     }
 
     @Override
@@ -92,9 +103,11 @@ public class MemberServiceImpl implements MemberService {
             MemberStatus status,
             Pageable pageable
     ) {
-        String searchKeyword = normalizeKeyword(keyword);
-
-        var page = memberRepository.searchMembers(searchKeyword, status, pageable);
+        var page = memberRepository.searchMembers(
+                normalizeNullable(keyword),
+                status,
+                pageable
+        );
 
         return PageResponse.from(page, memberMapper::toSummaryResponse);
     }
@@ -102,15 +115,16 @@ public class MemberServiceImpl implements MemberService {
     @Override
     @Transactional(readOnly = true)
     public MemberResponse getMemberDetailForAdmin(Long id) {
-        Member member = getActiveMemberById(id);
-        return memberMapper.toResponse(member);
+        return memberMapper.toResponse(getActiveMemberById(id));
     }
 
     @Override
     @Transactional(readOnly = true)
     public MemberResponse getMemberByCodeForAdmin(String memberCode) {
-        Member member = memberRepository.findByMemberCodeAndIsDeletedFalse(memberCode)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy hội viên với mã: " + memberCode));
+        String normalizedCode = normalizeRequired(memberCode).toUpperCase(Locale.ROOT);
+
+        Member member = memberRepository.findByMemberCodeAndIsDeletedFalse(normalizedCode)
+                .orElseThrow(() -> new AppException(ErrorCode.MEMBER_NOT_FOUND));
 
         return memberMapper.toResponse(member);
     }
@@ -119,146 +133,114 @@ public class MemberServiceImpl implements MemberService {
     @Transactional
     public MemberResponse updateMemberByAdmin(Long id, MemberUpdateRequest request) {
         Member member = getActiveMemberById(id);
-        User user = member.getUser();
+        User user = requireLinkedUser(member);
 
         updateUserInfoByAdmin(user, request);
         updateMemberInfoByAdmin(member, request);
 
-        if (user != null) {
-            userRepository.save(user);
-        }
-
-        Member savedMember = memberRepository.save(member);
-        return memberMapper.toResponse(savedMember);
+        userRepository.save(user);
+        return memberMapper.toResponse(memberRepository.save(member));
     }
 
     @Override
     @Transactional
-    public MemberResponse updateMemberStatusByAdmin(Long id, AdminMemberStatusUpdateRequest request) {
+    public MemberResponse updateMemberStatusByAdmin(
+            Long id,
+            AdminMemberStatusUpdateRequest request
+    ) {
         Member member = getActiveMemberById(id);
+        User user = requireLinkedUser(member);
 
         member.setStatus(request.getStatus());
+        syncUserStatusByMemberStatus(user, request.getStatus());
 
-        User user = member.getUser();
-        if (user != null) {
-            syncUserStatusByMemberStatus(user, request.getStatus());
-            userRepository.save(user);
-        }
-
-        Member savedMember = memberRepository.save(member);
-        return memberMapper.toResponse(savedMember);
+        userRepository.save(user);
+        return memberMapper.toResponse(memberRepository.save(member));
     }
 
     @Override
     @Transactional(readOnly = true)
-    public MemberResponse getMyProfile(String tokenIdentifier) {
-        User user = findUserByUsernameOrEmail(tokenIdentifier);
+    public MemberResponse getMyProfile() {
+        return memberMapper.toResponse(currentMemberService.getCurrentMember());
+    }
 
-        Member member = memberRepository.findByUserIdAndIsDeletedFalse(user.getId())
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy hồ sơ hội viên"));
+    @Override
+    @Transactional
+    public MemberResponse updateMyProfile(MyMemberUpdateRequest request) {
+        Member member = currentMemberService.getCurrentMember();
+        User user = requireLinkedUser(member);
+
+        updateMyUserInfo(user, request);
+        updateMyMemberInfo(member, request);
+
+        userRepository.save(user);
+        return memberMapper.toResponse(memberRepository.save(member));
+    }
+
+    @Override
+    @Transactional
+    public MemberResponse updateMyAvatar(MultipartFile file) {
+        Member member = currentMemberService.getCurrentMember();
+        User user = requireLinkedUser(member);
+
+        String avatarUrl = memberAvatarStorageService
+                .uploadMemberAvatar(user.getId(), file);
+
+        user.setAvatarUrl(avatarUrl);
+        userRepository.save(user);
 
         return memberMapper.toResponse(member);
     }
 
     @Override
     @Transactional
-    public MemberResponse updateMyProfile(String tokenIdentifier, MyMemberUpdateRequest request) {
-        User user = findUserByUsernameOrEmail(tokenIdentifier);
-
-        Member member = memberRepository.findByUserIdAndIsDeletedFalse(user.getId())
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy hồ sơ hội viên"));
-
-        updateMyUserInfo(user, request);
-        updateMyMemberInfo(member, request);
-
-        userRepository.save(user);
-        Member savedMember = memberRepository.save(member);
-
-        return memberMapper.toResponse(savedMember);
-    }
-
-    @Override
-    @Transactional
     public void deleteMemberByAdmin(Long id) {
         Member member = getActiveMemberById(id);
+        User user = requireLinkedUser(member);
 
         member.setIsDeleted(true);
         member.setStatus(MemberStatus.INACTIVE);
-        memberRepository.save(member);
 
-        User user = member.getUser();
-        if (user != null) {
-            user.setIsDeleted(true);
-            user.setStatus(UserStatus.INACTIVE);
-            userRepository.save(user);
-        }
+        user.setIsDeleted(true);
+        user.setStatus(UserStatus.INACTIVE);
+
+        memberRepository.save(member);
+        userRepository.save(user);
     }
 
     @Override
     @Transactional
     public void restoreMemberByAdmin(Long id) {
         Member member = memberRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy hội viên với ID: " + id));
+                .orElseThrow(() -> new AppException(ErrorCode.MEMBER_NOT_FOUND));
+
+        User user = requireLinkedUser(member);
 
         member.setIsDeleted(false);
         member.setStatus(MemberStatus.ACTIVE);
+
+        user.setIsDeleted(false);
+        user.setStatus(UserStatus.ACTIVE);
+
         memberRepository.save(member);
-
-        User user = member.getUser();
-        if (user != null) {
-            user.setIsDeleted(false);
-            user.setStatus(UserStatus.ACTIVE);
-            userRepository.save(user);
-        }
-    }
-
-    private void validateUniqueUsername(String username) {
-        if (userRepository.existsByUsername(username)) {
-            throw new RuntimeException("Tên đăng nhập đã tồn tại");
-        }
-    }
-
-    private void validateUniqueEmail(String email) {
-        if (userRepository.existsByEmail(email)) {
-            throw new RuntimeException("Email đã tồn tại");
-        }
-    }
-
-    private Member getActiveMemberById(Long id) {
-        Member member = memberRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy hội viên với ID: " + id));
-
-        if (Boolean.TRUE.equals(member.getIsDeleted())) {
-            throw new RuntimeException("Hồ sơ hội viên đã bị xóa");
-        }
-
-        return member;
-    }
-
-    private User findUserByUsernameOrEmail(String tokenIdentifier) {
-        return userRepository.findByUsername(tokenIdentifier)
-                .orElseGet(() -> userRepository.findByEmail(tokenIdentifier)
-                        .orElseThrow(() -> new RuntimeException("Không tìm thấy tài khoản người dùng")));
+        userRepository.save(user);
     }
 
     private void updateUserInfoByAdmin(User user, MemberUpdateRequest request) {
-        if (user == null) {
-            return;
-        }
-
-        if (request.getEmail() != null && !Objects.equals(request.getEmail(), user.getEmail())) {
-            if (userRepository.existsByEmail(request.getEmail())) {
-                throw new RuntimeException("Email đã tồn tại");
-            }
-            user.setEmail(request.getEmail());
+        if (request.getEmail() != null) {
+            String email = normalizeEmail(request.getEmail());
+            validateUniqueEmail(email, user.getId());
+            user.setEmail(email);
         }
 
         if (request.getFullName() != null) {
-            user.setFullName(request.getFullName());
+            user.setFullName(normalizeRequired(request.getFullName()));
         }
 
         if (request.getPhone() != null) {
-            user.setPhone(request.getPhone());
+            String phone = normalizeNullable(request.getPhone());
+            validateUniquePhone(phone, user.getId());
+            user.setPhone(phone);
         }
     }
 
@@ -272,15 +254,15 @@ public class MemberServiceImpl implements MemberService {
         }
 
         if (request.getAddress() != null) {
-            member.setAddress(request.getAddress());
+            member.setAddress(normalizeNullable(request.getAddress()));
         }
 
         if (request.getEmergencyContactName() != null) {
-            member.setEmergencyContactName(request.getEmergencyContactName());
+            member.setEmergencyContactName(normalizeNullable(request.getEmergencyContactName()));
         }
 
         if (request.getEmergencyContactPhone() != null) {
-            member.setEmergencyContactPhone(request.getEmergencyContactPhone());
+            member.setEmergencyContactPhone(normalizeNullable(request.getEmergencyContactPhone()));
         }
 
         if (request.getFitnessGoal() != null) {
@@ -288,25 +270,24 @@ public class MemberServiceImpl implements MemberService {
         }
 
         if (request.getHealthNote() != null) {
-            member.setHealthNote(request.getHealthNote());
+            member.setHealthNote(normalizeNullable(request.getHealthNote()));
         }
 
         if (request.getStatus() != null) {
             member.setStatus(request.getStatus());
+            syncUserStatusByMemberStatus(requireLinkedUser(member), request.getStatus());
         }
     }
 
     private void updateMyUserInfo(User user, MyMemberUpdateRequest request) {
         if (request.getFullName() != null) {
-            user.setFullName(request.getFullName());
+            user.setFullName(normalizeRequired(request.getFullName()));
         }
 
         if (request.getPhone() != null) {
-            user.setPhone(request.getPhone());
-        }
-
-        if (request.getAvatarUrl() != null) {
-            user.setAvatarUrl(request.getAvatarUrl());
+            String phone = normalizeNullable(request.getPhone());
+            validateUniquePhone(phone, user.getId());
+            user.setPhone(phone);
         }
     }
 
@@ -320,15 +301,15 @@ public class MemberServiceImpl implements MemberService {
         }
 
         if (request.getAddress() != null) {
-            member.setAddress(request.getAddress());
+            member.setAddress(normalizeNullable(request.getAddress()));
         }
 
         if (request.getEmergencyContactName() != null) {
-            member.setEmergencyContactName(request.getEmergencyContactName());
+            member.setEmergencyContactName(normalizeNullable(request.getEmergencyContactName()));
         }
 
         if (request.getEmergencyContactPhone() != null) {
-            member.setEmergencyContactPhone(request.getEmergencyContactPhone());
+            member.setEmergencyContactPhone(normalizeNullable(request.getEmergencyContactPhone()));
         }
 
         if (request.getFitnessGoal() != null) {
@@ -336,36 +317,94 @@ public class MemberServiceImpl implements MemberService {
         }
 
         if (request.getHealthNote() != null) {
-            member.setHealthNote(request.getHealthNote());
+            member.setHealthNote(normalizeNullable(request.getHealthNote()));
         }
     }
 
-    private void syncUserStatusByMemberStatus(User user, MemberStatus memberStatus) {
-        if (memberStatus == MemberStatus.ACTIVE) {
-            user.setStatus(UserStatus.ACTIVE);
-            user.setIsDeleted(false);
+    private Member getActiveMemberById(Long id) {
+        if (id == null) {
+            throw new AppException(ErrorCode.INVALID_REQUEST);
+        }
+
+        Member member = memberRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.MEMBER_NOT_FOUND));
+
+        if (Boolean.TRUE.equals(member.getIsDeleted())) {
+            throw new AppException(ErrorCode.MEMBER_NOT_FOUND);
+        }
+
+        return member;
+    }
+
+    private User requireLinkedUser(Member member) {
+        if (member.getUser() == null) {
+            throw new AppException(ErrorCode.MEMBER_NO_ACCOUNT);
+        }
+        return member.getUser();
+    }
+
+    private void validateUniqueUsername(String username, Long excludedUserId) {
+        userRepository.findByUsername(username)
+                .filter(user -> !Objects.equals(user.getId(), excludedUserId))
+                .ifPresent(user -> {
+                    throw new AppException(ErrorCode.USERNAME_ALREADY_EXISTS);
+                });
+    }
+
+    private void validateUniqueEmail(String email, Long excludedUserId) {
+        userRepository.findByEmail(email)
+                .filter(user -> !Objects.equals(user.getId(), excludedUserId))
+                .ifPresent(user -> {
+                    throw new AppException(ErrorCode.EMAIL_ALREADY_EXISTS);
+                });
+    }
+
+    private void validateUniquePhone(String phone, Long excludedUserId) {
+        if (phone == null) {
             return;
         }
 
-        if (memberStatus == MemberStatus.INACTIVE || memberStatus == MemberStatus.SUSPENDED) {
-            user.setStatus(UserStatus.INACTIVE);
+        userRepository.findByPhone(phone)
+                .filter(user -> !Objects.equals(user.getId(), excludedUserId))
+                .ifPresent(user -> {
+                    throw new AppException(ErrorCode.PHONE_ALREADY_EXISTS);
+                });
+    }
+
+    private void syncUserStatusByMemberStatus(User user, MemberStatus memberStatus) {
+        switch (memberStatus) {
+            case ACTIVE -> {
+                user.setStatus(UserStatus.ACTIVE);
+                user.setIsDeleted(false);
+            }
+            case INACTIVE, SUSPENDED -> user.setStatus(UserStatus.INACTIVE);
         }
     }
 
-    private String normalizeKeyword(String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
+    private String normalizeEmail(String value) {
+        return normalizeRequired(value).toLowerCase(Locale.ROOT);
+    }
+
+    private String normalizeRequired(String value) {
+        if (value == null || value.isBlank()) {
+            throw new AppException(ErrorCode.INVALID_REQUEST);
+        }
+        return value.trim();
+    }
+
+    private String normalizeNullable(String value) {
+        if (value == null) {
             return null;
         }
-        return keyword.trim();
+        String normalized = value.trim();
+        return normalized.isEmpty() ? null : normalized;
     }
 
     private String generateMemberCode() {
         String code;
-
         do {
             code = "MEM" + System.currentTimeMillis();
         } while (memberRepository.existsByMemberCode(code));
-
         return code;
     }
 }
